syntax = "proto3";

package auth;

option go_package = "github.com/sanjain/pixelflow/pkg/pb";

// AuthService handles user authentication and token validation.
service AuthService {
  // Register creates a new user account.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login authenticates a user and returns a JWT.
  rpc Login (LoginRequest) returns (LoginResponse);
  // Validate checks if a token is valid and returns the user ID.
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string user_id = 1;
}
